--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
 
             <!-- Hidden fields for Formspree -->
-            <input type="hidden" name="_replyto" id="email">
+            <input type="hidden" name="_replyto">
             <input type="hidden" name="_subject" value="New contact form submission from ANC 2B01 website">
 
             <!-- Honeypot field for spam protection -->
