created new pages and updated titels

--- a/actions.html
+++ b/actions.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>ANC 2B01 – Andrew DeFrank</title>
+  <title>Actions - Andrew DeFrank - ANC 2B01</title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -67,114 +67,6 @@
 
   <!-- Main content of the page -->
   <main id="main-content" role="main">
-    <!-- Personal background -->
-    <section id="about" class="section-band bg-lighter">
-      <div class="container">
-        <h3>Welcome</h3>
-
-        <!-- Headshot image with rounded styling and performance optimization -->
-        <div class="headshot-container">
-          <img src="images/anc-headshot.jpg"
-            alt="Andrew DeFrank, ANC 2B01 Commissioner, professional headshot showing him smiling outdoors with leafy background"
-            class="headshot-image" loading="lazy" width="250" height="250">
-        </div>
-
-        <p>
-          I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
-          ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
-            href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
-            target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
-            answer
-            questions and help solve problems for my constituents in North Dupont. Please <a href="#contact">get in
-              touch</a>, and scroll down to learn more. </b></p>
-        <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
-          economic development consultant, supporting transit-oriented development and parks and public space projects
-          in the DC
-          region.
-          I previously worked in DC government, including as a community engagement specialist responding to questions
-          and concerns from ANC
-          commissioners in Ward 2.</p>
-        <p>
-          I care deeply about DC's future. I advocate for building a more affordable and sustainable city through the
-          embrace dense urban
-          growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
-          government and ultimately secure
-          equal rights through statehood. I write and edit for local publications that
-          aim to inform and inspire Washingtonians.
-        </p>
-        <p>
-          I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
-          DC's sports teams. I live on 19th Street in North Dupont.
-        </p>
-      </div>
-    </section>
-
-    <!-- Section describing what an ANC is -->
-    <section id="whats-an-anc" class="section-band bg-light">
-
-      <div class="container">
-        <h3>What is an ANC?</h3>
-        <figure class="anc-map-container">
-          <img src="images/anc-map.png"
-            alt="A screenshot of a map of Washington, DC, with the boundaries of each ANC and single-member district displayed in different colors"
-            loading="lazy" width="250" height="250">
-          <figcaption>Source: OpenANC.org
-          </figcaption>
-        </figure>
-        <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
-          Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
-          began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
-          January 2, 2025.
-        </p>
-        <p>In the words of <a href="https://51st.news/what-are-washington-dc-advisory-neighborhood-commissions-anc/"
-            target="_blank" rel="noopener noreferrer"><i>The 51st</i></a>,
-          "At a very basic level, your Advisory Neighborhood Commissioner is the neighborhood's eyes and ears, and
-          the
-          mechanism to tip people higher up in the government if something isn't working. That relationship also flows
-          in the other direction: D.C. agencies often have to come before ANCs to, say, present plans on a new traffic
-          pattern for a specific street, allowing for residents to be notified and share their input in one place."
-        </p>
-        <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts.
-          There are 46 ANCs consisting of 345 single-member districts in DC. Each single-member district includes about
-          2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
-            rel="noopener noreferrer">OpenANC.org</a> is a great website that maintains an updated map and list of ANCs.
-        </p>
-      </div>
-    </section>
-
-    <!-- Interactive map with enhanced accessibility -->
-    <section id="anc" class="section-band bg-lighter">
-      <div class="container">
-        <h3>About ANC 2B01</h3>
-        <p>ANC 2B01 is one of nine single-member districts in <a href="https://www.dupontcircleanc.net/wordpress/"
-            target="_blank" rel="noopener noreferrer">ANC
-            2B</a>, which covers the Dupont Circle
-          neighborhood.
-        </p>
-        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the map below:</p>
-
-        <!-- Interactive map with enhanced accessibility -->
-        <figure class="map-container" role="region"
-          aria-label="Interactive map of DC Advisory Neighborhood Commissions">
-          <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;" allowfullscreen
-            loading="lazy" title="DC ANC Interactive Map - Enter your address to find your ANC district">
-            Your browser does not support iframes. You can view the map directly at
-            <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
-          </iframe>
-          <figcaption>Source: OpenANC.org</figcaption>
-        </figure>
-        <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
-          bookstore,
-          Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the American
-          Geophysical Union
-          building, the forthcoming <a
-            href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
-            target="_blank" rel="noopener noreferrer">
-            Connecticut Ave Deckover</a> and much more.</p>
-      </div>
-    </section>
-
     <!-- Current priorities or actions taken -->
     <section id="actions" class="section-band bg-light">
       <div class="container">
@@ -195,65 +87,6 @@
         </p>
       </div>
     </section>
-
-    <!-- Contact details -->
-    <section id="contact" class="section-band bg-lighter">
-      <div class="container">
-        <h3>Contact</h3>
-        <p> Get in touch via email at <strong><a href="mailto:2b01@anc.dc.gov">2b01@anc.dc.gov</a></strong>,
-          by call/text
-          at <strong><a href="tel:+12027272525">(202) 727-2525</a></strong>, or by filling out the form below:</p>
-
-        <div class="container">
-          <!-- Contact form with enhanced accessibility -->
-          <form action="https://formspree.io/f/mblyzged" method="POST" novalidate
-            aria-labelledby="contact-form-heading">
-            <h3 id="contact-form-heading" class="sr-only">Contact Form</h3>
-
-            <div class="form-group">
-              <label for="name">Full Name <span class="required" aria-label="required">*</span></label>
-              <input type="text" id="name" name="name" required aria-describedby="name-error" autocomplete="name">
-              <div id="name-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <div class="form-group">
-              <label for="email">Email Address <span class="required" aria-label="required">*</span></label>
-              <input type="email" id="email" name="email" required aria-describedby="email-error" autocomplete="email">
-              <div id="email-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="text" id="subject" name="subject" autocomplete="off">
-            </div>
-
-            <div class="form-group">
-              <label for="message">Message <span class="required" aria-label="required">*</span></label>
-              <textarea id="message" name="message" placeholder="Please enter your message here..." required
-                aria-describedby="message-error"></textarea>
-              <div id="message-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <!-- Hidden fields for Formspree -->
-            <input type="hidden" name="_replyto">
-            <input type="hidden" name="_subject" value="New contact form submission from ANC 2B01 website">
-
-            <!-- Honeypot field for spam protection -->
-            <div class="honeypot" aria-hidden="true">
-              <label for="website">Website (leave blank)</label>
-              <input type="text" id="website" name="website" tabindex="-1" autocomplete="off">
-            </div>
-
-            <button type="submit" class="submit-btn" aria-describedby="form-status">Send Message</button>
-            <div id="form-status" class="form-status" role="status" aria-live="polite"></div>
-          </form>
-        </div>
-        <p></p>
-        <p>You can also find contact information for other commissioners in Dupont Circle ANC 2B <a
-            href="https://www.dupontcircleanc.net/wordpress/about/commissioners/" target="_blank"
-            rel="noopener noreferrer">here</a>.</p>
-      </div>
-    </section> <!-- End of contact section -->
   </main>
 
   <!-- Footer area -->
