--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>ANC 2B01 – Andrew DeFrank</title>
+  <title>About - Andrew DeFrank - ANC 2B01</title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -109,151 +109,6 @@
         </p>
       </div>
     </section>
-
-    <!-- Section describing what an ANC is -->
-    <section id="whats-an-anc" class="section-band bg-light">
-
-      <div class="container">
-        <h3>What is an ANC?</h3>
-        <figure class="anc-map-container">
-          <img src="images/anc-map.png"
-            alt="A screenshot of a map of Washington, DC, with the boundaries of each ANC and single-member district displayed in different colors"
-            loading="lazy" width="250" height="250">
-          <figcaption>Source: OpenANC.org
-          </figcaption>
-        </figure>
-        <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
-          Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
-          began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
-          January 2, 2025.
-        </p>
-        <p>In the words of <a href="https://51st.news/what-are-washington-dc-advisory-neighborhood-commissions-anc/"
-            target="_blank" rel="noopener noreferrer"><i>The 51st</i></a>,
-          "At a very basic level, your Advisory Neighborhood Commissioner is the neighborhood's eyes and ears, and
-          the
-          mechanism to tip people higher up in the government if something isn't working. That relationship also flows
-          in the other direction: D.C. agencies often have to come before ANCs to, say, present plans on a new traffic
-          pattern for a specific street, allowing for residents to be notified and share their input in one place."
-        </p>
-        <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts.
-          There are 46 ANCs consisting of 345 single-member districts in DC. Each single-member district includes about
-          2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
-            rel="noopener noreferrer">OpenANC.org</a> is a great website that maintains an updated map and list of ANCs.
-        </p>
-      </div>
-    </section>
-
-    <!-- Interactive map with enhanced accessibility -->
-    <section id="anc" class="section-band bg-lighter">
-      <div class="container">
-        <h3>About ANC 2B01</h3>
-        <p>ANC 2B01 is one of nine single-member districts in <a href="https://www.dupontcircleanc.net/wordpress/"
-            target="_blank" rel="noopener noreferrer">ANC
-            2B</a>, which covers the Dupont Circle
-          neighborhood.
-        </p>
-        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the map below:</p>
-
-        <!-- Interactive map with enhanced accessibility -->
-        <figure class="map-container" role="region"
-          aria-label="Interactive map of DC Advisory Neighborhood Commissions">
-          <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;" allowfullscreen
-            loading="lazy" title="DC ANC Interactive Map - Enter your address to find your ANC district">
-            Your browser does not support iframes. You can view the map directly at
-            <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
-          </iframe>
-          <figcaption>Source: OpenANC.org</figcaption>
-        </figure>
-        <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
-          bookstore,
-          Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the American
-          Geophysical Union
-          building, the forthcoming <a
-            href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
-            target="_blank" rel="noopener noreferrer">
-            Connecticut Ave Deckover</a> and much more.</p>
-      </div>
-    </section>
-
-    <!-- Current priorities or actions taken -->
-    <section id="actions" class="section-band bg-light">
-      <div class="container">
-        <h3>Actions</h3>
-        <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner. </p>
-        <p>
-        <div class="iframe-container clipped-sheet">
-          <iframe
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
-            title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
-            height="600" loading="lazy" scrolling="no" frameborder="0" aria-describedby="initiatives-description">
-          </iframe>
-          <div id="initiatives-description" class="sr-only">
-            A spreadsheet tracking current initiatives and projects being worked on by Commissioner Andrew DeFrank for
-            ANC 2B01.
-          </div>
-        </div>
-        </p>
-      </div>
-    </section>
-
-    <!-- Contact details -->
-    <section id="contact" class="section-band bg-lighter">
-      <div class="container">
-        <h3>Contact</h3>
-        <p> Get in touch via email at <strong><a href="mailto:2b01@anc.dc.gov">2b01@anc.dc.gov</a></strong>,
-          by call/text
-          at <strong><a href="tel:+12027272525">(202) 727-2525</a></strong>, or by filling out the form below:</p>
-
-        <div class="container">
-          <!-- Contact form with enhanced accessibility -->
-          <form action="https://formspree.io/f/mblyzged" method="POST" novalidate
-            aria-labelledby="contact-form-heading">
-            <h3 id="contact-form-heading" class="sr-only">Contact Form</h3>
-
-            <div class="form-group">
-              <label for="name">Full Name <span class="required" aria-label="required">*</span></label>
-              <input type="text" id="name" name="name" required aria-describedby="name-error" autocomplete="name">
-              <div id="name-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <div class="form-group">
-              <label for="email">Email Address <span class="required" aria-label="required">*</span></label>
-              <input type="email" id="email" name="email" required aria-describedby="email-error" autocomplete="email">
-              <div id="email-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="text" id="subject" name="subject" autocomplete="off">
-            </div>
-
-            <div class="form-group">
-              <label for="message">Message <span class="required" aria-label="required">*</span></label>
-              <textarea id="message" name="message" placeholder="Please enter your message here..." required
-                aria-describedby="message-error"></textarea>
-              <div id="message-error" class="error-message" role="alert" aria-live="polite"></div>
-            </div>
-
-            <!-- Hidden fields for Formspree -->
-            <input type="hidden" name="_replyto">
-            <input type="hidden" name="_subject" value="New contact form submission from ANC 2B01 website">
-
-            <!-- Honeypot field for spam protection -->
-            <div class="honeypot" aria-hidden="true">
-              <label for="website">Website (leave blank)</label>
-              <input type="text" id="website" name="website" tabindex="-1" autocomplete="off">
-            </div>
-
-            <button type="submit" class="submit-btn" aria-describedby="form-status">Send Message</button>
-            <div id="form-status" class="form-status" role="status" aria-live="polite"></div>
-          </form>
-        </div>
-        <p></p>
-        <p>You can also find contact information for other commissioners in Dupont Circle ANC 2B <a
-            href="https://www.dupontcircleanc.net/wordpress/about/commissioners/" target="_blank"
-            rel="noopener noreferrer">here</a>.</p>
-      </div>
-    </section> <!-- End of contact section -->
   </main>
 
   <!-- Footer area -->
