updates to the new pages

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>Contact - Andrew DeFrank - ANC 2B01</title>
+  <title>Contact - Commissioner Andrew DeFrank - ANC 2B01</title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -53,11 +53,10 @@
         ☰
       </button>
       <ul>
-        <li><a href="#top">Welcome</a></li>
-        <li><a href="#whats-an-anc">What's an ANC?</a></li>
-        <li><a href="#anc">About 2B01</a></li>
-        <li><a href="#actions">Actions</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about-me.html">About Me</a></li>
+        <li><a href="about-ancs.html">About ANCs</a></li>
+        <li><a href="actions.html">Actions</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -68,46 +67,45 @@
   <!-- Main content of the page -->
   <main id="main-content" role="main">
     <!-- Personal background -->
-    <section id="about" class="section-band bg-lighter">
-      <div class="container">
-        <h3>Welcome</h3>
+    <div class="container">
+      <h3>Welcome</h3>
 
-        <!-- Headshot image with rounded styling and performance optimization -->
-        <div class="headshot-container">
-          <img src="images/anc-headshot.jpg"
-            alt="Andrew DeFrank, ANC 2B01 Commissioner, professional headshot showing him smiling outdoors with leafy background"
-            class="headshot-image" loading="lazy" width="250" height="250">
-        </div>
-
-        <p>
-          I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
-          ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
-            href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
-            target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
-            answer
-            questions and help solve problems for my constituents in North Dupont. Please <a href="#contact">get in
-              touch</a>, and scroll down to learn more. </b></p>
-        <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
-          economic development consultant, supporting transit-oriented development and parks and public space projects
-          in the DC
-          region.
-          I previously worked in DC government, including as a community engagement specialist responding to questions
-          and concerns from ANC
-          commissioners in Ward 2.</p>
-        <p>
-          I care deeply about DC's future. I advocate for building a more affordable and sustainable city through the
-          embrace dense urban
-          growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
-          government and ultimately secure
-          equal rights through statehood. I write and edit for local publications that
-          aim to inform and inspire Washingtonians.
-        </p>
-        <p>
-          I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
-          DC's sports teams. I live on 19th Street in North Dupont.
-        </p>
+      <!-- Headshot image with rounded styling and performance optimization -->
+      <div class="headshot-container">
+        <img src="images/anc-headshot.jpg"
+          alt="Andrew DeFrank, ANC 2B01 Commissioner, professional headshot showing him smiling outdoors with leafy background"
+          class="headshot-image" loading="lazy" width="250" height="250">
       </div>
+
+      <p>
+        I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
+        ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
+          href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
+          target="_blank" rel="noopener noreferrer">a
+          vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
+          answer
+          questions and help solve problems for my constituents in North Dupont. Please <a href="#contact">get in
+            touch</a>, and scroll down to learn more. </b></p>
+      <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
+        economic development consultant, supporting transit-oriented development and parks and public space projects
+        in the DC
+        region.
+        I previously worked in DC government, including as a community engagement specialist responding to questions
+        and concerns from ANC
+        commissioners in Ward 2.</p>
+      <p>
+        I care deeply about DC's future. I advocate for building a more affordable and sustainable city through the
+        embrace dense urban
+        growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
+        government and ultimately secure
+        equal rights through statehood. I write and edit for local publications that
+        aim to inform and inspire Washingtonians.
+      </p>
+      <p>
+        I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
+        DC's sports teams. I live on 19th Street in North Dupont.
+      </p>
+    </div>
     </section>
 
     <!-- Section describing what an ANC is -->
