--- a/about-ancs.html
+++ b/about-ancs.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>About ANCs - Andrew DeFrank - ANC 2B01</title>
+  <title>About ANCs - Commissioner Andrew DeFrank - ANC 2B01 </title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -53,11 +53,10 @@
         ☰
       </button>
       <ul>
-        <li><a href="#top">Welcome</a></li>
-        <li><a href="#whats-an-anc">What's an ANC?</a></li>
-        <li><a href="#anc">About 2B01</a></li>
-        <li><a href="#actions">Actions</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about-me.html">About Me</a></li>
+        <li><a href="about-ancs.html">About ANCs</a></li>
+        <li><a href="actions.html">Actions</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -130,27 +129,6 @@
             href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
             target="_blank" rel="noopener noreferrer">
             Connecticut Ave Deckover</a> and much more.</p>
-      </div>
-    </section>
-
-    <!-- Current priorities or actions taken -->
-    <section id="actions" class="section-band bg-light">
-      <div class="container">
-        <h3>Actions</h3>
-        <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner. </p>
-        <p>
-        <div class="iframe-container clipped-sheet">
-          <iframe
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
-            title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
-            height="600" loading="lazy" scrolling="no" frameborder="0" aria-describedby="initiatives-description">
-          </iframe>
-          <div id="initiatives-description" class="sr-only">
-            A spreadsheet tracking current initiatives and projects being worked on by Commissioner Andrew DeFrank for
-            ANC 2B01.
-          </div>
-        </div>
-        </p>
       </div>
     </section>
   </main>
