addition of homepage buttons

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             answer
             questions and help solve problems for my constituents in North Dupont. Please <a href="#contact">get in
               touch</a>, and scroll down to learn more. </b></p>
+        <div class="homepage-buttons">
+          <a href="about-me.html" class="cta-button">About Me</a>
+          <a href="about-ancs.html" class="cta-button">About ANCs</a>
+          <a href="actions.html" class="cta-button">Actions</a>
+          <a href="contact.html" class="cta-button">Contact</a>
+        </div>
       </div>
     </section>
 
