--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="left">
       <!-- Left side of the header: title and role -->
       <h2 class="subtitle">Commissioner</h2>
-      <h1>Andrew DeFrank</h1>
+      <h1><a href="index.html">Andrew DeFrank</a></h1>
       <h2 class="subtitle">ANC 2B01</h2>
     </div>
 
