fixing header spacing

--- a/actions.html
+++ b/actions.html
@@ -40,6 +40,7 @@
   <a id="top"></a>
   <!-- Fixed header that remains visible as you scroll -->
   <header class="site-header" role="banner">
+
     <div class="left">
       <!-- Left side of the header: title and role -->
       <h2 class="subtitle">Commissioner</h2>
@@ -66,24 +67,26 @@
 
   <!-- Main content of the page -->
   <main id="main-content" role="main">
-    <!-- Current priorities or actions taken -->
-    <div class="container">
-      <h3>Actions</h3>
-      <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner. </p>
-      <p>
-      <div class="iframe-container clipped-sheet">
-        <iframe
-          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
-          title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
-          height="600" loading="lazy" scrolling="no" frameborder="0" aria-describedby="initiatives-description">
-        </iframe>
-        <div id="initiatives-description" class="sr-only">
-          A spreadsheet tracking current initiatives and projects being worked on by Commissioner Andrew DeFrank for
-          ANC 2B01.
+    <section id="contact" class="section-band bg-lighter">
+
+      <!-- Current priorities or actions taken -->
+      <div class="container">
+        <h3>Actions</h3>
+        <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner. </p>
+        <p>
+        <div class="iframe-container clipped-sheet">
+          <iframe
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrLo4YYgdp0PXS5En77Pxa9edLahFeLimOB4mROjV_Jwohxjht8BJ-KK0NKS-82ve3Ed-5blzY9mOU/pubhtml?gid=2017435653&single=true"
+            title="Commissioner Andrew DeFrank's Initiatives Tracker - Current projects and priorities" width="100%"
+            height="600" loading="lazy" scrolling="no" frameborder="0" aria-describedby="initiatives-description">
+          </iframe>
+          <div id="initiatives-description" class="sr-only">
+            A spreadsheet tracking current initiatives and projects being worked on by Commissioner Andrew DeFrank for
+            ANC 2B01.
+          </div>
         </div>
+        </p>
       </div>
-      </p>
-    </div>
     </section>
   </main>
 
