gold contact button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <a href="about-me.html" class="cta-button">About Me</a>
           <a href="about-ancs.html" class="cta-button">About ANCs</a>
           <a href="actions.html" class="cta-button">Actions</a>
-          <a href="contact.html" class="cta-button">Contact</a>
+          <a href="contact.html" class="cta-button cta-contact">Contact</a>
         </div>
       </div>
     </section>
