fix front page text

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             target="_blank" rel="noopener noreferrer">a
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
             answer
-            questions and help solve problems for my constituents in North Dupont. Please <a href="#contact">get in
-              touch</a>, and scroll down to learn more. </b></p>
+            questions and help solve problems for my constituents in North Dupont. </b> Please <a href="#contact">get in
+            touch</a>, and click one of the following links to learn more about my background, ANCs, and my actions as
+          commissioner.</p>
         <div class="homepage-buttons">
           <a href="about-me.html" class="cta-button">About Me</a>
           <a href="about-ancs.html" class="cta-button">About ANCs</a>
