--- a/about-me.html
+++ b/about-me.html
@@ -86,27 +86,29 @@
             target="_blank" rel="noopener noreferrer">a
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
             answer
-            questions and help solve problems for my constituents in North Dupont. Please <a href="contact.html">get in
-              touch</a>! </b></p>
-        <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
-          economic development consultant, supporting transit-oriented development and parks and public space projects
-          in the DC
-          region.
-          I previously worked in DC government, including as a community engagement specialist responding to questions
-          and concerns from ANC
-          commissioners in Ward 2.</p>
-        <p>
-          I care deeply about DC's future. I advocate for building a more affordable and sustainable city through the
-          embrace dense urban
-          growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
-          government and ultimately secure
-          equal rights through statehood. I write and edit for local publications that
-          aim to inform and inspire Washingtonians.
-        </p>
-        <p>
-          I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
-          DC's sports teams. I live on 19th Street in North Dupont.
-        </p>
+            questions and help solve problems for my constituents in North Dupont.
+            <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
+              economic development consultant, supporting transit-oriented development and parks and public space
+              projects
+              in the DC
+              region.
+              I previously worked in DC government, including as a community engagement specialist responding to
+              questions
+              and concerns from ANC
+              commissioners in Ward 2.</p>
+            <p>
+              I care deeply about DC's future. I advocate for building a more affordable and sustainable city through
+              the
+              embrace dense urban
+              growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
+              government and ultimately secure
+              equal rights through statehood. I write and edit for local publications that
+              aim to inform and inspire Washingtonians.
+            </p>
+            <p>
+              I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
+              DC's sports teams. I live on 19th Street in North Dupont.
+            </p>
       </div>
     </section>
   </main>
