--- a/about-ancs.html
+++ b/about-ancs.html
@@ -49,10 +49,11 @@
 
     <nav class="right" role="navigation" id="main-navigation" aria-label="Main navigation">
       <!-- Hamburger button -->
-      <button class="menu-toggle" aria-expanded="false" aria-label="Toggle menu">
+      <button class="menu-toggle" aria-controls="primary-menu" aria-label="Toggle navigation menu"
+        aria-expanded="false">
         ☰
       </button>
-      <ul>
+      <ul id="primary-menu">
         <li><a href="about-me.html">About Me</a></li>
         <li><a href="about-ancs.html">About ANCs</a></li>
         <li><a href="actions.html">Actions</a></li>
