--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             target="_blank" rel="noopener noreferrer">a
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
             answer
-            questions and help solve problems for my constituents in North Dupont. </b> Please <a href="#contact">get in
+            questions and help solve problems for my constituents in North Dupont. </b></p>
+        <p> Please <a href="#contact">get in
             touch</a>, and click one of the following links to learn more about my background, ANCs, and my actions as
           commissioner.</p>
         <div class="homepage-buttons">
