get in touch link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
             answer
             questions and help solve problems for my constituents in North Dupont. </b></p>
-        <p> Please <li><a href="contact.html">get in touch</a></li>, or click one of the following links to learn more
+        <p> Please <a href="contact.html" target="_blank" rel="noopener noreferrer">get in touch</a>, or click one of
+          the following links to learn more
           about my background, ANCs, and my actions as
           commissioner.</p>
         <div class="homepage-buttons">
