new page for 2b01

--- a/about-ancs.html
+++ b/about-ancs.html
@@ -55,7 +55,8 @@
       </button>
       <ul id="primary-menu">
         <li><a href="about-me.html">About Me</a></li>
-        <li><a href="about-ancs.html">About ANCs</a></li>
+        <li><a href="about-ancs.html">What's an ANC?</a></li>
+        <li><a href="anc-2b01.html">ANC 2B01</a></li>
         <li><a href="actions.html">Actions</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -100,38 +101,6 @@
           2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
             rel="noopener noreferrer">OpenANC.org</a> is a great website that maintains an updated map and list of ANCs.
         </p>
-      </div>
-    </section>
-
-    <!-- Interactive map with enhanced accessibility -->
-    <section id="anc" class="section-band bg-lighter">
-      <div class="container">
-        <h3>About ANC 2B01</h3>
-        <p>ANC 2B01 is one of nine single-member districts in <a href="https://www.dupontcircleanc.net/wordpress/"
-            target="_blank" rel="noopener noreferrer">ANC
-            2B</a>, which covers the Dupont Circle
-          neighborhood.
-        </p>
-        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the map below:</p>
-
-        <!-- Interactive map with enhanced accessibility -->
-        <figure class="map-container" role="region"
-          aria-label="Interactive map of DC Advisory Neighborhood Commissions">
-          <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;" allowfullscreen
-            loading="lazy" title="DC ANC Interactive Map - Enter your address to find your ANC district">
-            Your browser does not support iframes. You can view the map directly at
-            <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
-          </iframe>
-          <figcaption>Source: OpenANC.org</figcaption>
-        </figure>
-        <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
-          bookstore,
-          Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the American
-          Geophysical Union
-          building, the forthcoming <a
-            href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
-            target="_blank" rel="noopener noreferrer">
-            Connecticut Ave Deckover</a> and much more.</p>
       </div>
     </section>
   </main>
