--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>ANC 2B01 – Andrew DeFrank</title>
+  <title>About ANCs - Commissioner Andrew DeFrank - ANC 2B01 </title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -55,12 +55,10 @@
       </button>
       <ul id="primary-menu">
         <li><a href="about-me.html">About Me</a></li>
-        <li><a href="about-ancs.html">What's an ANC?</a></li>
-        <li><a href="anc-2b01.html">ANC 2B01</a></li>
+        <li><a href="about-ancs.html">About ANCs</a></li>
         <li><a href="actions.html">Actions</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
     </nav>
   </header>
 
@@ -69,36 +67,36 @@
 
   <!-- Main content of the page -->
   <main id="main-content" role="main">
-    <!-- Personal background -->
-    <section id="about" class="section-band bg-lighter">
+
+    <!-- Interactive map with enhanced accessibility -->
+    <section id="anc" class="section-band bg-lighter">
       <div class="container">
-        <h3>Welcome</h3>
+        <h3>About ANC 2B01</h3>
+        <p>ANC 2B01 is one of nine single-member districts in <a href="https://www.dupontcircleanc.net/wordpress/"
+            target="_blank" rel="noopener noreferrer">ANC
+            2B</a>, which covers the Dupont Circle
+          neighborhood.
+        </p>
+        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the map below:</p>
 
-        <!-- Headshot image with rounded styling and performance optimization -->
-        <div class="headshot-container">
-          <img src="images/anc-headshot.jpg"
-            alt="Andrew DeFrank, ANC 2B01 Commissioner, professional headshot showing him smiling outdoors with leafy background"
-            class="headshot-image" loading="lazy" width="250" height="250">
-        </div>
-
-        <p>
-          I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
-          ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
-            href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
-            target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
-            answer
-            questions and help solve problems for my constituents in North Dupont. </b></p>
-        <p> Please <a href="contact.html" target="_blank" rel="noopener noreferrer">get in touch</a>, or click one of
-          the following links to learn more
-          about my background, ANCs, and my actions as
-          commissioner.</p>
-        <div class="homepage-buttons">
-          <a href="about-me.html" class="cta-button">About Me</a>
-          <a href="about-ancs.html" class="cta-button">About ANCs</a>
-          <a href="actions.html" class="cta-button">Actions</a>
-          <a href="contact.html" class="cta-button cta-contact">Contact</a>
-        </div>
+        <!-- Interactive map with enhanced accessibility -->
+        <figure class="map-container" role="region"
+          aria-label="Interactive map of DC Advisory Neighborhood Commissions">
+          <iframe src="https://openanc.org/?embed=true" width="100%" height="600" style="border:0;" allowfullscreen
+            loading="lazy" title="DC ANC Interactive Map - Enter your address to find your ANC district">
+            Your browser does not support iframes. You can view the map directly at
+            <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
+          </iframe>
+          <figcaption>Source: OpenANC.org</figcaption>
+        </figure>
+        <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
+          bookstore,
+          Teaism, the Dupont Underground, the National Museum of American Jewish Military History, the American
+          Geophysical Union
+          building, the forthcoming <a
+            href="https://dc.urbanturf.com/articles/blog/construction_set_to_begin_on_dupont_circle_deckover/23615"
+            target="_blank" rel="noopener noreferrer">
+            Connecticut Ave Deckover</a> and much more.</p>
       </div>
     </section>
   </main>
