--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,8 @@
 
       <ul id="primary-menu">
         <li><a href="about-me.html">About Me</a></li>
-        <li><a href="about-ancs.html">About ANCs</a></li>
+        <li><a href="about-ancs.html">What's an ANC?</a></li>
+        <li><a href="anc-2b01.html">ANC 2B01</a></li>
         <li><a href="actions.html">Actions</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
