--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
             answer
             questions and help solve problems for my constituents in North Dupont. </b></p>
-        <p> Please <a href="contact.html" target="_blank" rel="noopener noreferrer">get in touch</a>, or click one of
-          the following links to learn more
-          about my background, ANCs, and my actions as
-          commissioner.</p>
+        <p>
+          Please
+          <a href="contact.html" target="_blank" rel="noopener noreferrer">get in touch</a>, or click one of
+          the following links to learn more about my background, ANCs, and my actions as commissioner.
+        </p>
+
         <div class="homepage-buttons">
           <a href="about-me.html" class="cta-button">About Me</a>
           <a href="about-ancs.html" class="cta-button">About ANCs</a>
           <a href="actions.html" class="cta-button">Actions</a>
           <a href="contact.html" class="cta-button cta-contact">Contact</a>
         </div>
+
       </div>
     </section>
   </main>
