--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
         <div class="homepage-buttons">
           <a href="about-me.html" class="cta-button">About Me</a>
-          <a href="about-ancs.html" class="cta-button">About ANCs</a>
+          <a href="about-ancs.html" class="cta-button">What's an ANC?</a>
+          <a href="anc-2b01.html" class="cta-button">ANC 2B01</a>
           <a href="actions.html" class="cta-button">Actions</a>
           <a href="contact.html" class="cta-button cta-contact">Contact</a>
         </div>
