--- a/about-ancs.html
+++ b/about-ancs.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>About ANCs - Commissioner Andrew DeFrank - ANC 2B01 </title>
+  <title>What's an ANC? - Commissioner Andrew DeFrank - ANC 2B01 </title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -73,7 +73,7 @@
     <section id="whats-an-anc" class="section-band bg-light">
 
       <div class="container">
-        <h3>What is an ANC?</h3>
+        <h3>What's an ANC?</h3>
         <figure>
           <div class="anc-map-container">
             <img src="images/anc-map.png"
