--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>About - Commissioner Andrew DeFrank - ANC 2B01</title>
+  <title>About Me - Commissioner Andrew DeFrank - ANC 2B01</title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
