--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>About ANCs - Commissioner Andrew DeFrank - ANC 2B01 </title>
+  <title>ANC 2B01 - Commissioner Andrew DeFrank - ANC 2B01 </title>
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
@@ -55,7 +55,8 @@
       </button>
       <ul id="primary-menu">
         <li><a href="about-me.html">About Me</a></li>
-        <li><a href="about-ancs.html">About ANCs</a></li>
+        <li><a href="about-ancs.html">What's an ANC?</a></li>
+        <li><a href="anc-2b01.html">ANC 2B01</a></li>
         <li><a href="actions.html">Actions</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
