fix anc map image

--- a/about-ancs.html
+++ b/about-ancs.html
@@ -74,14 +74,11 @@
 
       <div class="container">
         <h3>What's an ANC?</h3>
-        <figure>
-          <div class="anc-map-container">
-            <img src="images/anc-map.png"
-              alt="A screenshot of a map of Washington, DC, with the boundaries of each ANC and single-member district displayed in different colors"
-              loading="lazy" width="250" height="250">
-          </div>
+        <figure class="anc-map-container">
+          <img src="images/anc-map.png" ...>
           <figcaption>Source: OpenANC.org</figcaption>
         </figure>
+
 
         <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
           Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
