--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -88,7 +88,7 @@
             Your browser does not support iframes. You can view the map directly at
             <a href="https://openanc.org" target="_blank" rel="noopener noreferrer">openanc.org</a>.
           </iframe>
-          <figcaption>Source: OpenANC.org</figcaption>
+          <figcaption class="credit">Source: OpenANC.org</figcaption>
         </figure>
         <p>Notable places in ANC 2B01 include Dupont Coffee Collective (formerly Firehook Bakery), Kramers
           bookstore,
