--- a/actions.html
+++ b/actions.html
@@ -76,7 +76,11 @@
       <!-- Current priorities or actions taken -->
       <div class="container">
         <h3>Actions</h3>
-        <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner.</p>
+        <p>Below is a running list of initiatives and actions I've completed as your ANC commissioner. I've included
+          <b>who</b> brought up the issue (a constituent, a business, or myself), <b>when</b> it was brought up,
+          <b>what</b>
+          the issue is, and <b>how</b> it will be resolved, if possible.
+        </p>
 
         <div class="iframe-container clipped-sheet">
           <iframe
